--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <img src="images/background1.jpg" alt="Unsplashed background img 1">
         </div>
       </div>
-      <div id="section1" class="scrollspy container scale-transition">
+      <div id="section1" class="scrollspy container">
         <div class="section">
           <!--   Icon Section   -->
           <div class="row">
