--- a/basketball.html
+++ b/basketball.html
@@ -45,7 +45,6 @@
             </a>
           </div>
           <!-- TODO: do this sticky (with pushpin) && scrollspy-->
-          <!-- TODO: add bar at bottom of tabs -->
           <!-- TODO: add shadow like on the navbar -->
           <div class="nav-content container">
             <ul class="tabs">
@@ -53,9 +52,8 @@
                 <a class="active" href="#roster">Roster</a>
               </li>
               <li class="tab">
-                <a href="#section1">Section 1</a>
+                <a href="#coaching-staff">Coaching Staff</a>
               </li>
-              <!-- TODO: add ad the bottom a line to show the selected tab (like in a tab component) -->
             </ul>
           </div>
         </nav>
@@ -69,15 +67,16 @@
           <a class="uppercase" href="#">Indoor football</a>
         </li>
         <li>
-          <a class="uppercase" href="basketball.html">Basketball</a>
+          <!-- TODO: mark as active on the sidenav -->
+          <a class="uppercase active" href="basketball.html">Basketball</a>
         </li>
       </ul>
     </header>
     <main>
-      <div id="roster" class="scrollspy container">
+      <div id="roster" class="container">
         <div class="row">
           <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
-          <h3>Roster</h3>
+          <h4 class="uppercase">Roster</h4>
           <div class="col s10 m6 l4 offset-s1">
             <div class="card">
               <div class="card-image">
@@ -87,10 +86,10 @@
                   <i class="material-icons">add</i>
                 </a>
                 <!-- TODO: meter aqui una sombra -->
-                <span class="card-title">1</span>
+                <span class="card-title circle">1</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Juancho</span>
+                <span class="card-title uppercase">Juancho</span>
                 <p class="grey-text">Point Guard</p>
               </div>
               <div class="card-reveal">
@@ -111,7 +110,7 @@
                 <span class="card-title">34</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Vega</span>
+                <span class="card-title uppercase">Vega</span>
                 <p class="grey-text">Point Guard</p>
               </div>
               <div class="card-reveal">
@@ -132,7 +131,7 @@
                 <span class="card-title">18</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Charly</span>
+                <span class="card-title uppercase">Charly</span>
                 <p class="grey-text">Point Guard - Shooting Guard</p>
               </div>
               <div class="card-reveal">
@@ -153,7 +152,7 @@
                 <span class="card-title">19</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Guitian</span>
+                <span class="card-title uppercase">Guitián</span>
                 <p class="grey-text">Safe Guard - Small Forward</p>
               </div>
               <div class="card-reveal">
@@ -174,7 +173,7 @@
                 <span class="card-title">3</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Marcos</span>
+                <span class="card-title uppercase">Marcos</span>
                 <p class="grey-text">Power Forward</p>
               </div>
               <div class="card-reveal">
@@ -195,8 +194,8 @@
                 <span class="card-title">21</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Pepe</span>
-                <p class="grey-text">Shooting Guard - Small Forward - Power Formward</p>
+                <span class="card-title uppercase">Pepe</span>
+                <p class="grey-text">Shooting Guard - Small Forward - Power Forward</p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Title
@@ -216,7 +215,7 @@
                 <span class="card-title">7</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Demi</span>
+                <span class="card-title uppercase">Demi</span>
                 <p class="grey-text">Small Forward - Power Forward</p>
               </div>
               <div class="card-reveal">
@@ -237,7 +236,7 @@
                 <span class="card-title">00</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Nico</span>
+                <span class="card-title uppercase">Nico</span>
                 <p class="grey-text">Small Forward - Power Forward</p>
               </div>
               <div class="card-reveal">
@@ -258,7 +257,7 @@
                 <span class="card-title">16</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Marcos</span>
+                <span class="card-title uppercase">Marcos</span>
                 <p class="grey-text">Power Forward</p>
               </div>
               <div class="card-reveal">
@@ -279,7 +278,7 @@
                 <span class="card-title">17</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Herráez</span>
+                <span class="card-title uppercase">Herráez</span>
                 <p class="grey-text">De todo menos lo que deberia</p>
               </div>
               <div class="card-reveal">
@@ -300,7 +299,7 @@
                 <span class="card-title">10</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Arjona</span>
+                <span class="card-title uppercase">Arjona</span>
                 <p class="grey-text">Center</p>
               </div>
               <div class="card-reveal">
@@ -321,7 +320,7 @@
                 <span class="card-title">14</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Jesús</span>
+                <span class="card-title uppercase">Jesús</span>
                 <p class="grey-text">Small Forward</p>
               </div>
               <div class="card-reveal">
@@ -342,7 +341,7 @@
                 <span class="card-title">X</span>
               </div>
               <div class="card-content">
-                <span class="card-title">Gabi</span>
+                <span class="card-title uppercase">Gabi</span>
                 <p class="grey-text">Power Forward - Center</p>
               </div>
               <div class="card-reveal">
@@ -356,8 +355,32 @@
 
         </div>
       </div>
-      <div id="section1" class="scrollspy container">
-
+      <div id="coaching-staff" class="container">
+        <div class="row">
+          <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
+          <h4 class="uppercase">Head Coach</h4>
+          <div class="col s10 m6 l4 offset-s1">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <!-- TODO: meter aqui un feature discovery -->
+                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                  <i class="material-icons">add</i>
+                </a>
+              </div>
+              <div class="card-content">
+                <span class="card-title uppercase">John Doe</span>
+                <p class="grey-text">Lorem ipsum</p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Card Title
+                  <i class="material-icons right">close</i>
+                </span>
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
