Added copyright footer

--- a/basketball.html
+++ b/basketball.html
@@ -21,6 +21,7 @@
 
     gtag('config', 'UA-111248524-1');
   </script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 
   <body>
     <header>
@@ -411,8 +412,14 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container"> Made with
-          <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        <div class="container">
+          <i class="fas fa-code"></i>
+          <span>with</span>
+          <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>  
+          <div class="right">
+              <span>See this project on</span>
+              <a href="https://github.com/RaulOlmedoCheca/Classics-Franchise-Web"><i class="fab fa-github fa-lg"></i></a>
+          </div>  
         </div>
       </div>
     </footer>
