--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     gtag('config', 'UA-111248524-1');
   </script>
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 
   <body>
     <header>
@@ -214,10 +214,16 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container"> Made with
-          <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+          <div class="container">
+            <i class="fas fa-code"></i>
+            <span>with</span>
+            <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>  
+            <div class="right">
+                <span>See this project on</span>
+                <a href="https://github.com/RaulOlmedoCheca/Classics-Franchise-Web"><i class="fab fa-github fa-lg"></i></a>
+            </div>  
+          </div>
         </div>
-      </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
