--- a/basketball.html
+++ b/basketball.html
@@ -53,7 +53,10 @@
                 <a class="active" href="#roster">Roster</a>
               </li>
               <li class="tab">
-                <a href="#coaching-staff">Coaching Staff</a>
+                <a href="#stats">Stats</a>
+              </li>
+              <li class="tab">
+                <a href="#news">News</a>
               </li>
             </ul>
           </div>
@@ -154,7 +157,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title uppercase">Guitián</span>
-                <p class="grey-text">Safe Guard - Small Forward</p>
+                <p class="grey-text">Shooting Guard - Small Forward</p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Card Title
@@ -353,10 +356,7 @@
               </div>
             </div>
           </div>
-
         </div>
-      </div>
-      <div id="coaching-staff" class="container">
         <div class="row">
           <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
           <h4 class="uppercase">Head Coach</h4>
@@ -382,6 +382,27 @@
             </div>
           </div>
         </div>
+      </div>
+      <div id="stats" class="container">
+        <!-- <div class="row">  -->
+          <div class="col s10 m6">
+            <div class="card">
+              <div class="card-content">
+                <canvas id="myChart"></canvas>
+              </div>
+            </div>
+          </div>
+          <div class="col s10 m6">
+            <div class="card">
+              <div class="card-content">
+                <canvas id="myRadarChart"></canvas>
+              </div>
+            </div>
+          </div>
+        <!-- </div> -->
+      </div>
+      <div id="news" class="container">
+
       </div>
     </main>
 
@@ -415,20 +436,20 @@
         <div class="container">
           <i class="fas fa-code"></i>
           <span>with</span>
-          <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>  
+          <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
           <div class="right">
-              <span>See this project on</span>
-              <a href="https://github.com/RaulOlmedoCheca/Classics-Franchise-Web"><i class="fab fa-github fa-lg"></i></a>
-          </div>  
+            <span>See this project on</span>
+            <a href="https://github.com/RaulOlmedoCheca/Classics-Franchise-Web">
+              <i class="fab fa-github fa-lg"></i>
+            </a>
+          </div>
         </div>
       </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-      crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
     <script type="text/javascript" src="js/basketball.js"></script>
-
   </body>
 
 </html>
