Added modals to charts, need testing

--- a/basketball.html
+++ b/basketball.html
@@ -80,13 +80,13 @@
       <div id="roster" class="container">
         <div class="row">
           <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
-          <h4 class="uppercase">Roster</h4>
+          <h5 class="uppercase">Players</h5>
           <div class="col s10 m6 l4 offset-s1">
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
                 <!-- TODO: meter aqui un feature discovery -->
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <!-- TODO: meter aqui una sombra -->
@@ -108,7 +108,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">34</span>
@@ -129,7 +129,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">18</span>
@@ -150,7 +150,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">19</span>
@@ -171,7 +171,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">3</span>
@@ -192,7 +192,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">21</span>
@@ -213,7 +213,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">7</span>
@@ -234,7 +234,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">00</span>
@@ -255,7 +255,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">16</span>
@@ -276,7 +276,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">17</span>
@@ -297,7 +297,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">10</span>
@@ -318,7 +318,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">14</span>
@@ -339,7 +339,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
                 <span class="card-title">X</span>
@@ -359,13 +359,13 @@
         </div>
         <div class="row">
           <!-- TODO: centrar el nombre en mobile (classics) y esto tambien -->
-          <h4 class="uppercase">Head Coach</h4>
+          <h5 class="uppercase">Head Coach</h5>
           <div class="col s10 m6 l4 offset-s1">
             <div class="card">
               <div class="card-image">
                 <img src="images/sample-1.jpg">
                 <!-- TODO: meter aqui un feature discovery -->
-                <a class="btn-floating btn-large pulse halfway-fab waves-effect waves-light red activator hoverable">
+                <a class="btn-floating btn-large halfway-fab waves-effect waves-light teal activator hoverable">
                   <i class="material-icons">add</i>
                 </a>
               </div>
@@ -384,22 +384,42 @@
         </div>
       </div>
       <div id="stats" class="container">
-        <!-- <div class="row">  -->
-          <div class="col s10 m6">
-            <div class="card">
-              <div class="card-content">
-                <canvas id="myChart"></canvas>
+        <div class="row">
+          <h5 class="uppercase">Points per game</h5>
+          <div class="col s12">
+            <div class="card-panel hoverable waves-block waves-effect waves-teal modal-trigger" href="#points">
+              <canvas id="myChart"></canvas>
+            </div>
+            <!-- Modal Structure -->
+            <div id="points" class="modal">
+              <div class="modal-content">
+                
+              </div>
+              <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Close</a>
               </div>
             </div>
+
           </div>
-          <div class="col s10 m6">
-            <div class="card">
-              <div class="card-content">
-                <canvas id="myRadarChart"></canvas>
-              </div>
+        </div>
+        <div class="row">
+          <h5 class="uppercase">Overall team skills</h5>
+          <div class="col s12">
+            <div class="card-panel hoverable waves-block waves-effect waves-teal modal-trigger" href="#skills">
+              <canvas id="myRadarChart"></canvas>
             </div>
+            <!-- Modal Structure -->
+            <div id="skills" class="modal">
+                <div class="modal-content">
+                  <h6>Modal Header</h6>
+                  <canvas id="myRadarChart2"></canvas>
+                </div>
+                <div class="modal-footer">
+                  <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Close</a>
+                </div>
+              </div>
           </div>
-        <!-- </div> -->
+        </div>
       </div>
       <div id="news" class="container">
 
