Added news section + some changes in charts

--- a/basketball.html
+++ b/basketball.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
-    <link rel="stylesheet" type="text/css" href="css/basketball.css" media="screen,projection" /> </head>
+    <link rel="stylesheet" type="text/css" href="css/basketball.css" media="screen,projection" />
+  </head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111248524-1"></script>
   <script>
@@ -32,10 +33,10 @@
             <ul class="right hide-on-med-and-down">
               <!-- Links on desktop nav -->
               <li>
-                <a class="uppercase" href="#">Football</a>
+                <!-- <a class="uppercase" href="#">Football</a> -->
               </li>
               <li>
-                <a class="uppercase" href="#">Indoor football</a>
+                <!-- <a class="uppercase" href="#">Indoor football</a> -->
               </li>
               <li class="active">
                 <a class="uppercase" href="basketball.html">Basketball</a>
@@ -65,10 +66,10 @@
       <ul id="nav-mobile" class="sidenav">
         <!-- Links on mobile nav -->
         <li>
-          <a class="uppercase" href="#">Football</a>
+          <!-- <a class="uppercase" href="#">Football</a> -->
         </li>
         <li>
-          <a class="uppercase" href="#">Indoor football</a>
+          <!-- <a class="uppercase" href="#">Indoor football</a> -->
         </li>
         <li>
           <!-- TODO: mark as active on the sidenav -->
@@ -386,43 +387,102 @@
       <div id="stats" class="container">
         <div class="row">
           <h5 class="uppercase">Points per game</h5>
+          <!-- TODO: make this responsive (chart-container of chart.js) -->
+          <!-- TODO: haciendo click en esto se abre una nueva pagina con las stats de cada uno por partido -->
           <div class="col s12">
-            <div class="card-panel hoverable waves-block waves-effect waves-teal modal-trigger" href="#points">
+            <!-- <div class="card-panel hoverable waves-block waves-effect waves-teal"> -->
+            <div class="card-panel">
               <canvas id="myChart"></canvas>
             </div>
-            <!-- Modal Structure -->
-            <div id="points" class="modal">
-              <div class="modal-content">
-                
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Close</a>
-              </div>
-            </div>
-
           </div>
         </div>
         <div class="row">
           <h5 class="uppercase">Overall team skills</h5>
           <div class="col s12">
-            <div class="card-panel hoverable waves-block waves-effect waves-teal modal-trigger" href="#skills">
+            <!-- TODO: haciendo click en esto se abre una nueva pagina con las skills de cada uno -->
+            <!-- <div class="card-panel hoverable waves-block waves-effect waves-teal"> -->
+            <div class="card-panel">
               <canvas id="myRadarChart"></canvas>
             </div>
-            <!-- Modal Structure -->
-            <div id="skills" class="modal">
-                <div class="modal-content">
-                  <h6>Modal Header</h6>
-                  <canvas id="myRadarChart2"></canvas>
-                </div>
-                <div class="modal-footer">
-                  <a href="#!" class="modal-action modal-close waves-effect waves-teal btn-flat">Close</a>
-                </div>
-              </div>
           </div>
         </div>
       </div>
       <div id="news" class="container">
-
+        <!-- Next match: (schedule) day & hour -->
+        <!-- Cronica anterior en la tile de la izquierda ocupando todo el heigh posible -->
+        <div class="row">
+          <div class="col s12 m12 l12">
+            <div class="card-panel white-text teal darken-1">
+              <h5>Next match:</h5>
+              <!-- FIXME: ponerlo todo en una misma linea -->
+              <span>16/05/2018 - 14:00</span>
+            </div>
+          </div>
+          <div class="col s12 m12 l6">
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title">Portland Vs Mataos</span>
+              </div>
+              <div class="card-action">
+                <ul class="collapsible z-depth-0">
+                  <li class="active">
+                    <div class="collapsible-header">
+                      <i class="material-icons">filter_drama</i>Crónica</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">place</i>Result</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">whatshot</i>Puntos jugador partido</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m12 l6">
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title">Portland Vs Mataos 2</span>
+              </div>
+              <div class="card-action">
+                <ul class="collapsible z-depth-0">
+                  <li class="active">
+                    <div class="collapsible-header">
+                      <i class="material-icons">filter_drama</i>Crónica</div>
+                    <div class="collapsible-body">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">place</i>Result</div>
+                    <div class="collapsible-body">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">whatshot</i>Puntos jugador partido</div>
+                    <div class="collapsible-body">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
