--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <ul class="right hide-on-med-and-down">
               <!-- Links on desktop nav -->
               <li>
-                <a class="uppercase" href="#">Football</a>
+                <!-- <a class="uppercase" href="#">Football</a> -->
               </li>
               <li>
-                <a class="uppercase" href="#">Indoor football</a>
+                <!-- <a class="uppercase" href="#">Indoor football</a> -->
               </li>
               <li>
                 <a class="uppercase" href="basketball.html">Basketball</a>
@@ -72,10 +72,10 @@
       <ul id="nav-mobile" class="sidenav">
         <!-- Links on mobile nav -->
         <li>
-          <a class="uppercase" href="#">Football</a>
+          <!-- <a class="uppercase" href="#">Football</a> -->
         </li>
         <li>
-          <a class="uppercase" href="#">Indoor football</a>
+          <!-- <a class="uppercase" href="#">Indoor football</a> -->
         </li>
         <li>
           <a class="uppercase" href="basketball.html">Basketball</a>
