--- a/basketball.html
+++ b/basketball.html
@@ -13,14 +13,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="css/basketball.css" media="screen,projection" />
   </head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111248524-1"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-111248524-1');
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCwSoVs3MRzGuevvD7ETQAN6nZ3643OKPQ",
+      authDomain: "classics-franchise-web.firebaseapp.com",
+      databaseURL: "https://classics-franchise-web.firebaseio.com",
+      projectId: "classics-franchise-web",
+      storageBucket: "classics-franchise-web.appspot.com",
+      messagingSenderId: "880589943801"
+    };
+    firebase.initializeApp(config);
   </script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 
@@ -408,14 +412,17 @@
         </div>
       </div>
       <div id="news" class="container">
-        <!-- Next match: (schedule) day & hour -->
-        <!-- Cronica anterior en la tile de la izquierda ocupando todo el heigh posible -->
         <div class="row">
           <div class="col s12 m12 l12">
             <div class="card-panel white-text teal darken-1">
-              <h5>Next match:</h5>
-              <!-- FIXME: ponerlo todo en una misma linea -->
-              <span>16/05/2018 - 14:00</span>
+              <div class="row">
+                <div class="col m3 l3 offset-s3 offset-m3 offset-l3">
+                  <h5>Next match:</h5>
+                </div>
+                <div class="col m3 l3 offset-s3 offset-m1 offset-l1">
+                  <p>16/05/2018 - 14:00</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col s12 m12 l6">
@@ -453,28 +460,92 @@
           <div class="col s12 m12 l6">
             <div class="card">
               <div class="card-content">
-                <span class="card-title">Portland Vs Mataos 2</span>
+                <span class="card-title">Portland Vs Mataos</span>
               </div>
               <div class="card-action">
                 <ul class="collapsible z-depth-0">
                   <li class="active">
                     <div class="collapsible-header">
                       <i class="material-icons">filter_drama</i>Crónica</div>
-                    <div class="collapsible-body">
+                    <div class="collapsible-body grey lighten-3">
                       <span>Lorem ipsum dolor sit amet.</span>
                     </div>
                   </li>
                   <li>
                     <div class="collapsible-header">
                       <i class="material-icons">place</i>Result</div>
-                    <div class="collapsible-body">
+                    <div class="collapsible-body grey lighten-3">
                       <span>Lorem ipsum dolor sit amet.</span>
                     </div>
                   </li>
                   <li>
                     <div class="collapsible-header">
                       <i class="material-icons">whatshot</i>Puntos jugador partido</div>
-                    <div class="collapsible-body">
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m12 l6">
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title">Portland Vs Mataos</span>
+              </div>
+              <div class="card-action">
+                <ul class="collapsible z-depth-0">
+                  <li class="active">
+                    <div class="collapsible-header">
+                      <i class="material-icons">filter_drama</i>Crónica</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">place</i>Result</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">whatshot</i>Puntos jugador partido</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m12 l6">
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title">Portland Vs Mataos</span>
+              </div>
+              <div class="card-action">
+                <ul class="collapsible z-depth-0">
+                  <li class="active">
+                    <div class="collapsible-header">
+                      <i class="material-icons">filter_drama</i>Crónica</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">place</i>Result</div>
+                    <div class="collapsible-body grey lighten-3">
+                      <span>Lorem ipsum dolor sit amet.</span>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="collapsible-header">
+                      <i class="material-icons">whatshot</i>Puntos jugador partido</div>
+                    <div class="collapsible-body grey lighten-3">
                       <span>Lorem ipsum dolor sit amet.</span>
                     </div>
                   </li>
